--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ importlib-resources==5.7.1
 itsdangerous==2.0.1
 Jinja2==3.0.3
 Mako==1.1.6
+Markdown==3.4.1
 MarkupSafe==2.0.1
 Pillow==9.0.0
 pycparser==2.21
