--- a/requirements.txt
+++ b/requirements.txt
@@ -27,10 +27,14 @@ Jinja2==3.0.3
 Mako==1.1.6
 Markdown==3.4.1
 MarkupSafe==2.0.1
+mysql-connector-python==8.2.0
+phonenumbers==8.13.26
 Pillow==9.0.0
+protobuf==4.21.12
 pycparser==2.21
 PyMySQL==1.0.2
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2022.1
 requests==2.27.1
 six==1.16.0
